solve first 6 task